--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-	<title>Raleway - Creative Animated Template</title>
+	<title>弈棋知心的博客</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/simple-line-icons.css">
@@ -338,8 +338,8 @@
 		</div>
 		<div class="row">
 			<div class="col-md-12 copyright">
-				<p>Copyright &copy; 2084 <a href="#">Company Name</a></p>
-				<p>Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a> - More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> </p>
+				<p>Copyright &copy; 2017 <a href="#"弈棋知心</a></p>
+				<p>Visit my <a href="http://xiongzhiwen.ys168.com/" title="个人网盘" target="_blank">个人网盘</a> </p>
 			</div>
 		</div>
 	</footer>
