--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-	<title>弈棋知心的博客</title>
+	<title>弈棋知心</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/simple-line-icons.css">
@@ -37,7 +37,7 @@
 					<nav class="main-navigation menu-responsive hidden-md hidden-lg">
 						<ul class="main-menu">
 							<li><a class="show-1 active homebutton" href="#">Home</a></li>
-							<li><a class="show-2 aboutbutton" href="#">About Us</a></li>
+							<li><a class="show-2 aboutbutton" href="#">About Me</a></li>
 							<li><a class="show-3 projectbutton" href="#">Projects</a></li>
 							<li><a class="show-4 blogbutton" href="#">Blog Entries</a></li>
 							<li><a class="show-5 contactbutton" href="#">Contact</a></li>
@@ -339,7 +339,7 @@
 		<div class="row">
 			<div class="col-md-12 copyright">
 				<p>Copyright &copy; 2017 <a href="#"弈棋知心</a></p>
-				<p>Visit my <a href="http://xiongzhiwen.ys168.com/" title="个人网盘" target="_blank">个人网盘</a> </p>
+				<p>Visit  <a href="http://xiongzhiwen.ys168.com/" title="个人网盘" target="_blank">xiongzhiwen.ys168.com</a> </p>
 			</div>
 		</div>
 	</footer>
