--- a/index.html
+++ b/index.html
@@ -27,20 +27,20 @@
 				<div class="col-md-8">
 					<nav id="nav" class="main-navigation hidden-xs hidden-sm">
 						<ul class="main-menu">
-							<li><a class="show-1 active homebutton" href="#">Home</a></li>
-							<li><a class="show-2 aboutbutton" href="#">About Us</a></li>
-							<li><a class="show-3 projectbutton" href="#">Projects</a></li>
-							<li><a class="show-4 blogbutton" href="#">Blog Entries</a></li>
-							<li><a class="show-5 contactbutton" href="#">Contact</a></li>
+							<li><a class="show-1 active homebutton" href="#">主页</a></li>
+							<li><a class="show-2 aboutbutton" href="#">关于我</a></li>
+							<li><a class="show-3 projectbutton" href="#">作品</a></li>
+							<li><a class="show-4 blogbutton" href="#">我的博客</a></li>
+							<li><a class="show-5 contactbutton" href="#">联系</a></li>
 						</ul>
 					</nav>
 					<nav class="main-navigation menu-responsive hidden-md hidden-lg">
 						<ul class="main-menu">
-							<li><a class="show-1 active homebutton" href="#">Home</a></li>
-							<li><a class="show-2 aboutbutton" href="#">About Me</a></li>
-							<li><a class="show-3 projectbutton" href="#">Projects</a></li>
-							<li><a class="show-4 blogbutton" href="#">Blog Entries</a></li>
-							<li><a class="show-5 contactbutton" href="#">Contact</a></li>
+							<li><a class="show-1 active homebutton" href="#">主页</a></li>
+							<li><a class="show-2 aboutbutton" href="#">关于我</a></li>
+							<li><a class="show-3 projectbutton" href="#">作品</a></li>
+							<li><a class="show-4 blogbutton" href="#">我的博客</a></li>
+							<li><a class="show-5 contactbutton" href="#">联系</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -48,11 +48,10 @@
 		</div>
 	</header>
 
-	<div class="copyrights">Collect from <a href="http://www.cssmoban.com/"  title="网站模板">网站模板</a></div>
 	<div id="menu-container">
 		<div id="menu-1" class="homepage home-section container">
 			<div class="home-intro text-center">
-				<h2 class="welcome-title animated fadeInLeft">Introduction</h2>
+				<h2 class="welcome-title animated fadeInLeft">说明</h2>
 				<p class="animated fadeInRight">Raleway HTML5 template is provided by <span class="blue">template</span><span class="green">mo</span>. Credit goes to <a href="#">Unsplash</a> for photos. Feel free to modify and use this layout for any personal or commercial website.</p>
 				<ul class="list-icons animated fadeInUp">
 					<li><i class="icon-trophy"></i></li>
