--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="site-branding">
-						<a href="#"><h1>Raleway</h1></a>
+						<a href="#"><h1>弈棋知心</h1></a>
 					</div>
 				</div>
 				<a href="#" class="toggle-nav hidden-md hidden-lg">
@@ -52,21 +52,21 @@
 		<div id="menu-1" class="homepage home-section container">
 			<div class="home-intro text-center">
 				<h2 class="welcome-title animated fadeInLeft">说明</h2>
-				<p class="animated fadeInRight">Raleway HTML5 template is provided by <span class="blue">template</span><span class="green">mo</span>. Credit goes to <a href="#">Unsplash</a> for photos. Feel free to modify and use this layout for any personal or commercial website.</p>
-				<ul class="list-icons animated fadeInUp">
+				<p class="animated fadeInRight"之前部署在百度开放云上的个人网站由于到期所以 by <span class="blue"关闭了</span><span class="green">但是</span>. 我发现可以在github写网页，而且不收费，正好github可以新建一个项目及时记录我之前想实现的每日运动读书计划</p>
+				<!--<ul class="list-icons animated fadeInUp">
 					<li><i class="icon-trophy"></i></li>
 					<li><i class="icon-badge"></i></li>
 					<li><i class="icon-magic-wand"></i></li>
 					<li><i class="icon-screen-desktop"></i></li>
-				</ul>
+				</ul>-->
 			</div>
 			<div class="home-projects">
 				<div class="row">
 					<div class="col-md-6 col-sm-12">
 						<div class="project-title animated fadeInUp">
-							<h2>Latest Projects</h2>
-							<p>Sed eu turpis vehicula, iaculis sapien eu, molestie libero. Cras ac urna in neque commodo sodales vel et dolor. Pellentesque aliquam semper lectus, nec consequat ex lacinia nec. <br><br>Nunc eget velit nec felis ultrices vulputate venenatis interdum arcu. In ac auctor quam. </p>
-							<a href="#" class="pink-button">Continue Journal</a>
+							<h2>最新作品</h2>
+							<p>彩云之南，苍山洱海，徜徉在云南古老的街道，斑驳的青石板上，眸子里是青砖绿瓦，古朴而典雅。婀娜而飘逸的白云下，是洱海烟波。薄雾笼罩的是揭不开的面纱，羽化升仙般只是沉浸在苍山洱海的梦中。 </p>
+							<a href="#" class="pink-button">人间佳境</a>
 						</div>
 					</div>
 					<div class="project-home-holder col-md-6 col-sm-12">
