--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<div id="menu-1" class="homepage home-section container">
 			<div class="home-intro text-center">
 				<h2 class="welcome-title animated fadeInLeft">说明</h2>
-				<p class="animated fadeInRight">之前部署在百度开放云上的个人网站由于到期所以被无情的 <span class="blue"关闭了</span><span class="green">但是</span>. 我发现可以在github写网页，而且不收费，正好github可以新建一个项目及时记录我之前想实现的每日运动读书计划</p >
+				<p class="animated fadeInRight">之前部署在百度开放云上的个人网站由于到期所以被无情的 <span class="blue">关闭了</span><br/><span class="green">但是</span>. 我发现可以在github写网页，而且不收费，正好github可以新建一个项目及时记录我之前想实现的每日运动读书计划</p >
 				<!--<ul class="list-icons animated fadeInUp">
 					<li><i class="icon-trophy"></i></li>
 					<li><i class="icon-badge"></i></li>
