--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 					<div class="col-md-6 col-md-offset-3">
 						<div class="inner-story animated fadeInRight text-center">
 							<h2>关于我</h2>
-							<p>2017年合工大本科毕业，目前从事java软件开发</p >
+							<p>山有木兮木有枝</p >
 						</div>
 					</div>
 				</div>
