--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				<div class="row">
 					<div class="col-md-6 col-sm-12">
 						<div class="project-title animated fadeInUp">
-							<h2>最新作品</h2>
+							<h2>最新动态</h2>
 							<p>彩云之南，苍山洱海，徜徉在云南古老的街道，斑驳的青石板上，眸子里是青砖绿瓦，古朴而典雅。婀娜而飘逸的白云下，是洱海烟波。薄雾笼罩的是揭不开的面纱，羽化升仙般只是沉浸在苍山洱海的梦中。 </p >
 							<a href="#" class="pink-button">人间佳境</a >
 						</div>
@@ -338,7 +338,8 @@
 		<div class="row">
 			<div class="col-md-12 copyright">
 				<p>Copyright &copy; 2017 <a href="#"弈棋知心</a ></p >
-				<p>查看  <a href="http://xiongzhiwen.ys168.com/" title="个人网盘" target="_blank">xiongzhiwen.ys168.com</a ><a href="https://github.com/xiongzwen" target="_blank">我的github</a > </p >
+				<p>剑是凶器，剑技是杀人的伎俩，无论用多么美妙的语言去掩饰，这始终是事实。</p >
+				<p>道理对不对不是最重要的，态度对了才是最重要的</p>
 			</div>
 		</div>
 	</footer>
