--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 						<div class="project-item">
 							<img src="img/1.jpg" alt="">
 							<div class="overlay">
-								<h4><a href="#">第一个作品</a ></h4>
+								<h4><a href="http://liiqi.com/kszt" target="_blank"></a ></h4>
 							</div>
 						</div>
 					</div>
@@ -185,7 +185,7 @@
 						<div class="project-item">
 							<img src="img/2.jpg" alt="">
 							<div class="overlay">
-								<h4><a href="#">第二个作品</a ></h4>
+								<h4><a href="">第二个作品</a ></h4>
 							</div>
 						</div>
 					</div>
