--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
 							<li><a class="show-1 active homebutton" href="#">主页</a ></li>
 							<li><a class="show-2 aboutbutton" href="#">关于我</a ></li>
 							<li><a class="show-3 projectbutton" href="#">作品</a ></li>
+							<!--
 							<li><a class="show-4 blogbutton" href="#">我的博客</a ></li>
 							<li><a class="show-5 contactbutton" href="#">联系</a ></li>
+							-->
 						</ul>
 					</nav>
 					<nav class="main-navigation menu-responsive hidden-md hidden-lg">
@@ -39,8 +41,10 @@
 							<li><a class="show-1 active homebutton" href="#">主页</a ></li>
 							<li><a class="show-2 aboutbutton" href="#">关于我</a ></li>
 							<li><a class="show-3 projectbutton" href="#">作品</a ></li>
+							<!--
 							<li><a class="show-4 blogbutton" href="#">我的博客</a ></li>
 							<li><a class="show-5 contactbutton" href="#">联系</a ></li>
+							-->
 						</ul>
 					</nav>
 				</div>
@@ -51,8 +55,10 @@
 	<div id="menu-container">
 		<div id="menu-1" class="homepage home-section container">
 			<div class="home-intro text-center">
-				<h2 class="welcome-title animated fadeInLeft">说明</h2>
-				<p class="animated fadeInRight">之前部署在百度开放云上的个人网站由于到期所以被无情的 <span class="blue">关闭了</span><br/><span class="green">但是</span>. 我发现可以在github写网页，而且不收费，正好github可以新建一个项目及时记录我之前想实现的每日运动读书计划</p >
+				<h2 class="welcome-title animated fadeInLeft">程序员狗的一生</h2>
+				<p class="animated fadeInRight">
+程序狗的一生：22岁进外包公司，每天coding到3点，近视了；25岁进IT公司任高级工程师，天天坐着成了胖子，患前列腺炎；28岁进互联网公司担任架构师，贷款买房，同年秃顶；33岁成为CTO，熬出一身病，同年还完房贷；35岁带领创业公司上市前期发现癌症晚期，挂了，同年，老婆带着孩子房子改嫁
+					 <span class="green">所以</span>. 是时候记录下我之前想实现的每日运动读书计划</p >
 				<!--<ul class="list-icons animated fadeInUp">
 					<li><i class="icon-trophy"></i></li>
 					<li><i class="icon-badge"></i></li>
