--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
 						<ul class="main-menu">
 							<li><a class="show-1 active homebutton" href="#">主页</a ></li>
 							<li><a class="show-2 aboutbutton" href="#">关于我</a ></li>
-							<li><a class="show-3 projectbutton" href="#">作品</a ></li>
+							
 							<!--
+							<li><a class="show-3 projectbutton" href="#">作品</a ></li>
 							<li><a class="show-4 blogbutton" href="#">我的博客</a ></li>
 							<li><a class="show-5 contactbutton" href="#">联系</a ></li>
 							-->
@@ -58,7 +59,7 @@
 				<h2 class="welcome-title animated fadeInLeft">程序员狗的一生</h2>
 				<p class="animated fadeInRight">
 程序狗的一生：22岁进外包公司，每天coding到3点，近视了；25岁进IT公司任高级工程师，天天坐着成了胖子，患前列腺炎；28岁进互联网公司担任架构师，贷款买房，同年秃顶；33岁成为CTO，熬出一身病，同年还完房贷；35岁带领创业公司上市前期发现癌症晚期，挂了，同年，老婆带着孩子房子改嫁
-					 <span class="green">所以</span>. 是时候记录下我之前想实现的每日运动读书计划</p >
+					 <span class="green">So</span>. </p >
 				<!--<ul class="list-icons animated fadeInUp">
 					<li><i class="icon-trophy"></i></li>
 					<li><i class="icon-badge"></i></li>
@@ -127,6 +128,7 @@
 					</div>
 				</div>
 			</div>
+			<!--
 			<div class="our-offers">
 				<div class="offer-bg animated fadeIn"></div>
 				<div class="offer-header">
@@ -169,9 +171,11 @@
 						</div>
 					</div>
 				</div>
+				-->
 			</div>
 		</div>
 
+			
 		<div id="menu-3" class="content project-section container">
 			<div class="projects-header">
 				<h2 class="animated fadeInRight">我的作品</h2>
