--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 	<div id="menu-container">
 		<div id="menu-1" class="homepage home-section container">
 			<div class="home-intro text-center">
-				<h2 class="welcome-title animated fadeInLeft">程序员狗的一生</h2>
+				<h2 class="welcome-title animated fadeInLeft">程序员的一生</h2>
 				<p class="animated fadeInRight">
 程序狗的一生：22岁进外包公司，每天coding到3点，近视了；25岁进IT公司任高级工程师，天天坐着成了胖子，患前列腺炎；28岁进互联网公司担任架构师，贷款买房，同年秃顶；33岁成为CTO，熬出一身病，同年还完房贷；35岁带领创业公司上市前期发现癌症晚期，挂了，同年，老婆带着孩子房子改嫁
-					 <span class="green">So</span>. </p >
+					 <span class="green">So</span>.找个对象共勉 </p >
 				<!--<ul class="list-icons animated fadeInUp">
 					<li><i class="icon-trophy"></i></li>
 					<li><i class="icon-badge"></i></li>
